added placeholders, added icont from font awesome and changed bg color

--- a/stylesheet/styleshee.css
+++ b/stylesheet/styleshee.css
@@ -11,6 +11,14 @@ h1 {
   font-family: 'Exo', sans-serif;
 }
 
+#myBtn {
+  text-align: center;
+}
+
+#myBtn input {
+  width: 15em;
+}
+
 .form-group label {
   font-family: 'Montserrat', sans-serif;
 }
